mega_footer 7.x-1.8, 2018-05-01
—————————————————————————
- Significantly refactored code
- Updated all Drupal DB variable name to "mega_footer_" naming convention
- Added DB update to change existing variable names
- Added DB update to delete mega_footer_ variable table entries upon uninstall
- Broke out social media functions into .inc file
- Added validation of URLs
- Changed CSS class of social media icons

mega_footer 7.x-1.7, 2018-02-01
—————————————————————————
- Added SASS/SCSS support
- Fixed contact link CSS to match Web Standards
- Added ability to upload custom Social media icons which will automatically be converted to standards-compatible styling
- Remove bottom border which looked weird in mobile

mega_footer 7.x-1.6, 2017-02-14
—————————————————————————
- Academic Unit Title is no longer required

mega_footer 7.x-1.5, 2016-02-03
—————————————————————————

-Removed <h1> tags from title field in footer

mega_footer 7.x-1.4, 2016-02-03
—————————————————————————
- Deprecated contact fields
- Added alt text field for logo