@@ -156,11 +156,10 @@
     border-bottom: 1px solid #383d3e;
   }
 }
-/* [KM 12-5-16] Added stronger focus styles for keyboard accessibility */
+
 .megafoot a:focus, .big-foot-nav > li > a:focus,
 .little-foot-nav > li > a:focus {
-  outline: none;
-  border: 2px solid #4D90FE;
+  outline: 2px solid #4D90FE;
   -moz-box-shadow: 0px 0px 5px #4D90FE;
   -webkit-box-shadow: 0px 0px 5px #4D90FE;
   box-shadow: 0px 0px 5px #4D90FE;
