@@ -5,7 +5,6 @@ $a11y-strong-focus-color : #4D90FE;
 
 // Mixins
 @mixin a11y-strong-focus {
-  outline: none;
-  border: 2px solid $a11y-strong-focus-color;
+  outline: 2px solid $a11y-strong-focus-color;
   @include box-shadow(0px 0px 5px $a11y-strong-focus-color);
 }
